# embit

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.py
docs/: CNAME  README.md  _sidebar.md  index.html
docs/api/: README.md  _sidebar.md  base58.md  bech32.md  bip32.md  bip39.md  compact.md  ec.md  hashes.md  networks.md  psbt.md  psbtview.md  slip39.md  transaction.md
docs/api/descriptor/: README.md
docs/api/ec/: README.md  _sidebar.md  private_key.md  public_key.md  (+2 more)
docs/recepies/: README.md
embit/: __init__.py  base58.py  bip32.py  bip39.py  compact.py  ec.py  hashes.py  psbt.py  script.py  transaction.py
embit/util/: __init__.py  ctypes_secp256k1.py  key.py  py_secp256k1.py  pyhashlib.py  secp256k1.py
examples/: addresses.py  change.py  descriptor.py  explorer.py  hdkey.py  psbt.py  transactions.py
secp256k1/: Makefile  README.md
secp256k1/config/: libsecp256k1-config.h
src/embit/: base.py  base58.py  bcur.py  bech32.py  bip32.py  bip39.py  bip47.py  bip85.py  compact.py  ec.py  encoder.py  finalizer.py  hashes.py  misc.py  networks.py  psbt.py  psbtview.py  script.py  slip39.py  transaction.py
tests/: run_tests.py  unittest.py
tests/integration/: run_tests.py
tests/tests/: __init__.py  test_base58.py  test_bech32.py  test_bindings.py  test_bip32.py  test_bip39.py  test_bip47.py  test_bip85.py  test_descriptor.py  test_ecc.py  test_ecdh.py  test_finalizer.py  test_liquid.py  test_psbt.py  test_psbtview.py  test_psetview.py  test_ripemd160.py  test_script.py  test_slip39.py  test_taproot.py  test_taptree.py  test_threading.py
(+35 files in other folders)
